# mining_reliability_db

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MERGE_PROJECT_COMPLETE.md  Makefile  README.md  REFACTORING_METHODOLOGY.md  SEARCH_ALGORITHMS_BRANCH.md  STAKEHOLDER_JOURNEY_IMPLEMENTATION_COMPLETE.md  STAKEHOLDER_RESPONSE_REPORT.md  cleanup_for_search_branch.sh  config_consistency_report.txt  connect_devcontainer.sh  dashboard_architecture_completion_report.md  dashboard_validation_results.json  debug_solutions_table.py  demo_enhanced_stakeholder_journey.py  demo_stakeholder_journey.py  direct_test.py  docker-compose.yml  final_validation.py  final_validation_action_request_facility.py  final_verification.py  implementation_status_report.py  interface_compliance_fixes.txt  interface_compliance_report.txt  plan_completion_check.py  project_structure.md  pyproject.toml  quick_completion_test.py  quick_validation.py  requirements-dev.txt  requirements.txt  setup.py  start_dashboard.py  test_complete_stakeholder_journey.py  test_connection.py  test_consistency.py  (+10 more)
.cursor/rules/: neo4j-based-dashboard.mdc
.devcontainer/: devcontainer.json
.github/instructions/: neo4j-dashboard-instructions.md
configs/: __init__.py  case_study_schema.json  cypher_search_config.json  cypher_search_config_simple.json  dashboard_charts.json  dashboard_config.json  dashboard_styling.json  entity_classification.json  entity_connections.json  environment.py  field_analysis.json  field_category_display_mapping.json  field_mappings.json  graph_search_config.json  maintenance_records_config.json  model_schema.json  settings.py  stakeholder_essential_queries.json  stakeholder_intelligence_config.json  stakeholder_questions_schema.json  symptom_classification_config.json  system_constants.json  workflow_stages.json
configs/queries/: diagnostic_experts.cypher  effective_actions.cypher  effective_actions_debug.cypher  expert_departments.cypher  how_do_i_figure_out_whats_wrong.cypher  how_do_i_fix_it.cypher  investigation_approaches.cypher  potential_root_causes.cypher  prioritized_investigation_steps.cypher  proven_solutions.cypher  repair_timelines.cypher  what_should_i_check_first.cypher  who_can_help_me.cypher  why_did_this_happen.cypher
dashboard/: __init__.py  app.py
dashboard/adapters/: __init__.py  config_adapter.py  data_adapter.py  data_adapter_json_export.py  facility_adapter.py  interaction_handlers.py  interfaces.py  workflow_adapter.py
dashboard/assets/: custom_styles.css
dashboard/callbacks/: __init__.py  interaction_handlers.py
dashboard/components/: __init__.py  cypher_search.py  data_quality.py  facility_detail.py  graph_search.py  graph_visualizer.py  incident_search.py  interactive_elements.py  layout_template.py  portfolio_overview.py  solution_sequence_case_study.py  stakeholder_essentials.py  stakeholder_questions.py  tab_navigation.py  workflow_analysis.py
dashboard/dash-docs/: DASHBOARD-IMPLEMENT.md  InteractiveNavigationDashboard.md  dashboard_transformation_doc.md  iterative-enhancement.md  multi-tab-guideline.md
dashboard/layouts/: __init__.py  main_layout.py  stakeholder_questions_layout.py
dashboard/routing/: __init__.py  navigation_builder.py  url_manager.py
dashboard/utils/: __init__.py  data_transformers.py  style_constants.py  styling.py  url_builders.py
dashboard/validation/: __init__.py  architecture_validator.py  integration_tester.py  performance_profiler.py
data/: merge_report.json
data/combined/: .keep  all_facilities.json
data/excel_output/: .keep
data/facility_data/: .keep  fab16f86-faa9-44d9-b9d7-cfbbb47061da.json  mining_maintenance_nested.json  sample.json  sample_5_fab16f86-faa9-44d9-b9d7-cfbbb47061da.json  test_incremental_fab16f86.json
data/facility_markdown/: .keep  fab16f86_faa9_44d9_b9d7_cfbbb47061da.md  mining_maintenance_nested.md  sample_5_fab16f86_faa9_44d9_b9d7_cfbbb47061da.md  test_incremental_fab16f86.md
data/inter_data/: .keep  sample_5_fab16f86-faa9-44d9-b9d7-cfbbb47061da.json  test_incremental_fab16f86.json
data/raw_data/: .keep  fab16f86-faa9-44d9-b9d7-cfbbb47061da.json  mining_maintenance_nested.json  test_incremental_fab16f86.json  (+1 more)
docs/: 41_FIELD_DATASET_ANALYSIS.md  COMPREHENSIVE_SEARCH_IMPLEMENTATION.md  CONSISTENCY_IMPROVEMENTS_SUMMARY.md  DEV_CONTAINER_SETUP_GUIDE.md  NEO4J_COMMAND_LINE_GUIDE.md  PROJECT_STRUCTURE_WORKFLOW.md  PROJECT_STRUCTURE_WORKFLOW_ACCURATE.md  README.md  SEARCH_BRANCH_CLEANUP_PLAN.md  common-issues.md  config_consistency_analysis.md  field_mapping_duplication_analysis.md  implementation_guide.md  merge_process_documentation.md
mine_core/: __init__.py
scripts/: README_facility_splitter.md  analyze_data_quality.py  analyze_unused_functions.py  basic_data_statistics.py  check_interface_compliance.py  create_schema.py  enforce_config_consistency.py  fix_raw_data.py  import_data.py  preprocess_data.py  reset_db.py  split_facility_records.py  test_comprehensive_graph_search.py  test_neo4j_curl.sh  validate_consistency.py  validate_dashboard_architecture.py  validate_phase1_core_foundation.py
tests/: __init__.py  analyze_stakeholder_response.py  check_na_values.py  cleanup_hardcoded_values.py  comprehensive_validation.py  debug_database_fields.py  debug_grouping_issue.py  debug_neo4j.py  explore_neo4j.py  explore_neo4j_fixed.py  final_production_validation.py  final_validation_report.py  fix_neo4j.py  relationship_test.py  simple_debug.py  simple_test.py  test_complete_fix.py  test_comprehensive_implementation.py  test_database.py  test_db_interface.py  test_end_to_end.py  test_entities.py  test_field_mapping_fix.py  test_field_mappings.py  test_field_processing.py  test_filter_fix.py  test_final_fix.py  test_five_query_stakeholder_journey.py  test_grouping_query.py  test_incident_root_cause.py  test_json_quality.py  test_json_recording.py  test_neo4j.py  test_pipelines.py  test_query_fields.py  test_schema_validator.py  test_transformer.py  test_updated_query.py  test_updated_query_final.py  validation_test.py
utils/: __init__.py  json_recorder.py
(+125 files in other folders)
