[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mining_reliability_db"
version = "0.1.0"
description = "Graph-based database system for mining incident analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mining Reliability Team"}
]
dependencies = [
    "neo4j==5.28.1",
    "pandas==2.1.4",
    "numpy==1.26.4",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "black==25.1.0",
    "flake8==7.2.0",
    "mypy==1.15.0",
    "isort==6.0.1",
    "pylint==3.3.6",
]

[project.scripts]
create-schema = "scripts.create_schema:main"
import-data = "scripts.import_data:main"
reset-db = "scripts.reset_db:main"

[tool.setuptools]
packages = ["mine_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=mine_core"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
